objects/Contact_Report_Assignment__c.object
<CustomObject>
    <description>Contacts for a specific set of reports</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Report Assignments</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Contact Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.  Note:  Only contacts at the account will be visible on the list.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>contains</operation>
                <value>Integration User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Report Assignments</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>If a contact is no longer active on the account and/or no longer needs to receive reports, please input the date the contact report assignment should be inactivated.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this contact should appear in the “To:” line of the report email template.  Only one contact can be placed in the “To:” line.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_List__c</fullName>
        <label>Report List</label>
        <picklist>
            <picklistValues>
                <fullName>CMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing ROI Report</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Role_Account__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Role Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shows status of contact report assignment record based on End Date entered.</description>
        <formula>IF(  ispickval( Contact__r.Status__c,&quot;Inactive&quot;), &quot;Inactive&quot;,

IF( AND( 
 Ispickval(WebID__r.Status__c, &quot;Active&quot;), 

OR( End_Date__c &gt; Today(), 
ISNULL(End_Date__c ), 
 ispickval( Contact__r.Status__c,&quot;Active&quot;))), &quot;Active&quot;, &quot;Inactive&quot;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Note: Only WebIDs for the account will be listed here.</errorMessage>
            <filterItems>
                <field>WebID__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Contact Report Assignments</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Report Assignment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>CRA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Report Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>